--- a/aboutme.html
+++ b/aboutme.html
@@ -48,20 +48,22 @@
             Обо мне
         </h2>
         <p><img src="/pict/No_Picture.jpg">
-            На данный момент являюсь студентом третьего курса факультета информационных технологий университета
-            <strong>ИТМО</strong>. <br>
-            В основном меня привлекает backend разработка, имею несколько учебных проектов на различных
-            языках.<br>
-            Также обладаю некоторыми навыки в frontend разработке<br>
-            Проживаю в Санкт-Петербурге, работа предпочительно в городе.<br>
+            На данный момент являюсь студентом третьего курса факультета информационных технологий университета.
+            <strong>ИТМО</strong>.
+            Проживаю в Санкт-Петербурге, Центральный район.
+            Возраст - 20 лет. Нахожусь на обучении.
+            Ищу стажировку с целью получения новых знаний и опыта разработки.
         </p>
         <h3>Предпочтительная должность и зарплата</h3>
         <p>
-            Желаю получить стажировку в backend разработке<br>
-            Предпочтительный стэк - C++, Java <br>
-            На данный момент принимаю только предложения стажировок <br></p>
+            Желаю получить стажировку в направлении разработки программного обеспечения.
+            Предочитаю работу в языках <strong>C++</strong> и <strong>JAVA</strong>.
+            На данный момент принимаю только предложения стажировок.
+        </p>
         <h3>Хобби и интересы</h3>
-        <p>Компьютерные игры, история, настольные игры, опенсорс разработка</p>
+        <p>Своё увлечение разработкой начал c компьютерных игр, постепенно увлёкся настольными играми.
+            Интересуюсь историей, иногда помогаю в opensource проектах
+        </p>
 
     </div>
 </div>
