--- a/skills.html
+++ b/skills.html
@@ -42,31 +42,41 @@
 </header>
 <div class="text-container">
     <div class="text-content">
-        <h1>
-            Краткое описание моих знаний и навыков
-        </h1>
-        <h3>Разработка</h3>
+        <h1></h1>
+        <h2>
+            Краткое описание знаний и навыков
+        </h2>
+        <ul class="skills">
+            <li>
+                <p>Разработка</p>
+                <p><strong>Bash ★★★★☆</strong>
+                    <strong>C++ ★★★☆☆</strong>
+                    <strong>Java ★★★☆☆</strong>
+                    <strong>Python ★★★☆☆</strong>
+                    <strong>C# ★★★☆☆</strong>
+                    <strong>Powershell ★★☆☆☆</strong>
+                    <strong>Java ★★★☆☆</strong></p>
+            </li>
+            <li>
+                <p>
+                    Операционные системы</p>
+                <p><strong>Windows Server ★★★☆☆</strong>
+                    <strong>VirtualBox ★★★☆☆</strong>
+                    <strong>Linux ★★★☆☆</strong>
+                    <strong>Windows ★★★★☆</strong></p>
+            </li>
+        </ul>
+        <p>Сеть</p>
+        <ul class="lst">
+            <li><p>Обработка POST и GET запросов.</p></li>
+            <li><p>Организация локальных сетей</p></li>
+            <li><p>Работа с роутерами MIKROTIK</p></li>
+            <li><p>Работу с Webhook и LongPolling</p></li>
+        </ul>
+        <p><strong>Языки</strong></p>
         <p>
-            На данный момент обладаю навыками написания кода на C#, C++, Java и Python. Имею знания в работе с
-            Powershell и Bash.<br>
-            Работал с NodeJS. Из фреймворков имел опыт работы с QT и WindowsForms.<br>
-            Умею работать с Github, Настраивал CI/CD Gitlab. Работал с системой Git.<br>
-        </p>
-        <h3>Операционные системы</h3>
-        <p>
-            Обладаю навыками работы с OS Windows, Linux. Понимаю принципы строения файлововых систем. <br>
-            работал с AD, организовывал локальные сети компьютеров и DNS сервер в Windows Server <br>
-            Умею работать с виртуальными машинами VirtualBox <br>
-        </p>
-        <h3>Сеть</h3>
-        <p>
-            Писал express сервер на NodeJs. Умею обрабатывать вебхуки и POST запросы. Организовывать локальные сети <br>
-            Поднятие хоста сайта и веб приложений на собственном железе. Работа с роутерами и модемами фирмы MIKROTIK
-        </p>
-        <h3>Языки</h3>
-        <p>
-            Родной язык русский, владею английским достаточным для чтения технической документации и использовании в
-            разговорах(Advanced).<br>
+            Русский-Родной
+            Английский-<strong>C1</strong>
         </p>
     </div>
 </div>
