--- a/experience.html
+++ b/experience.html
@@ -46,8 +46,9 @@
             Образование
         </h1>
         <p>
-            Студент третьего курса факультета программирования и информационных технологий <br>
+            Студент третьего курса бакалавриата факультета программирования и информационных технологий
             Направление "Программирование и интернет технологии"
+            Дата окончания 2022 год
         </p>
         <h2>Опыт</h2>
         <h3>Примерный список проектов с которыми я работал</h3>
